--- a/settings.json
+++ b/settings.json
@@ -1,24 +1,25 @@
 {
   "workbench.colorTheme": "Dracula",
+
   "editor.fontSize": 19,
   "editor.lineHeight": 24,
   "editor.fontFamily": "Fira Code",
   "editor.fontLigatures": true,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
-  "formattingToggle.affects": [
-    "formatOnSave"
-  ],
+  "formattingToggle.affects": ["formatOnSave"],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "editor.rulers": [
-    80,
-    120
-  ],
+
+  "editor.rulers": [80, 120],
+
   "editor.renderLineHighlight": "gutter",
+
   "terminal.integrated.fontSize": 14,
+
   "workbench.iconTheme": "material-icon-theme",
+
   "material-icon-theme.activeIconPack": "nest",
   "material-icon-theme.folders.associations": {
     "entities": "class",
@@ -31,14 +32,25 @@
     "implementations": "core",
     "websockets": "pipe"
   },
+
   "material-icon-theme.files.associations": {
     "ormconfig.json": "database",
     "tsconfig.json": "tune"
   },
-  "emmet.syntaxProfiles": {
-    "javascript": "jsx"
-  },
+
+  "emmet.syntaxProfiles": { "javascript": "jsx" },
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
+  },
+  "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
+  "[vue]": {
+    "editor.defaultFormatter": "octref.vetur"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
